@@ -1,7 +1,0 @@
-# $Id$
-
-JAVA_FILES = *.java
-
-RESOURCE_FILES = *.dtd
-
-include $(SYS_MAKEFILE_DIR)/Package.mk
